# qt-conan-cmake-min-example

./: .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
